# mnist-diffusion

./: .gitignore  CHANGELOG.md  README.md  REPORT.md  analyze_distribution.py  chamfer.py  cifar100_base_gate.py  cifar_cfg_sample.py  cifar_classifier.py  cifar_data.py  cifar_judge.py  claude.md  ddpm.py  evaluate.py  fid.py  fid_clean.py  fix_tasks_mnist_diffusion.md  inference.py  inference_var.py  make_thesis_figures.py  mechanism.py  metrics_features.py  metrics_prdc.py  phase1_edm_repro.py  pyproject.toml  regen_cifar100_cells.py  run_c0_recall_density.py  run_c2_partial.py  run_c2c3c5_intervention.py  run_c4_variance.py  run_c6_fidmin_duel.py  run_c7_probe_fid_stability.py  run_cifar100_d3_intervention.py  run_cifar100_fd_dinov2.py  run_cifar100_h3_duel.py  run_cifar_cfg_multiseed.py  run_cifar_cfg_scout.py  run_cifar_cfg_upper_scout.py  run_cifar_selector.py  run_comparison.py  (+14 more)
datasets/: __init__.py  cifar.py  cifar100_gseed.py
docs/: amendment_cifar10_v2.md  amendment_edm_backbone.md  c8_pareto_blindness.md  code_map.md  paper_branch3_diagnostic.md  paper_intro_draft.md  paper_skeleton_branch3.md  paper_skeleton_branch4.md  prereg_cifar100.md  prereg_stl10.md  release_bundle.md  results_analysis.md  thesis_draft.md  verdict_cifar100.md
records/: 2026-07-02-01_plan_ddim-comparison.md  2026-07-03-01_test_full-run-results.md  2026-07-03-02_test_phase0-caf-signal.md  2026-07-03-03_test_edm-fid-gate.md  2026-07-03-04_test_gateA-verdict.md  2026-07-03-05_proofread_chamfer-positioning.md  2026-07-03-06_test_cifar-preview.md  2026-07-03-08_plan_regenerated-roadmap.md  (+62 more)
(+135 files in other folders)
