[project]
name = "mnist-diffusion"
version = "0.1.0"
description = "從零實作 DDPM 生成 MNIST 手寫數字"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "torchvision>=0.22",
    "numpy",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
