[project]
name = "mnist-diffusion"
version = "0.1.0"
description = "取樣為效用而非保真度：CIFAR／MNIST 擴散的 CaF 選擇器、機制分析與量測堆疊（含 EDM 錨點、VAR-mini 旁支）"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7",
    "torchvision>=0.22",
    "numpy",
    "tqdm",
    "clean-fid>=0.1.35",
    "scipy",
    "pillow",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
